added list functionality of scores

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!-- Font for the scoreboard: Hanalei -->
-    <link href="https://fonts.googleapis.com/css2?family=Hanalei&display=swap" rel="stylesheet">
-    <!--
+    <!-- Font for the title: Hanalei -->
+    <!-- Font for general Text Anton -->
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Hanalei&display=swap" rel="stylesheet">    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
